[tool.poetry]
name = "sceptre-hook-template"
version = "0.0.1"
packages = [{ include = "hook" }]
readme = "README.md"
homepage = "https://github.com/Sceptre/sceptre-hook-template"
repository = "https://github.com/Sceptre/sceptre-hook-template"
authors = ["Sceptre <sceptreorg@gmail.com>"]
description = "A Github template for Sceptre hooks"
keywords = ["sceptre", "sceptre-hook"]
license = "Apache-2.0"
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Environment :: Console",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11"
]

[tool.poetry.plugins."sceptre.hooks"]
"custom" = "hook.custom:Custom"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.1"
tox = "^4.0.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
sceptre = ">3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
